2002-03-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (CONVERT_SUBSECSNTP2TIMEVAL): for completeness
	(CONVERT_SUBSECSNTP2TIMESPEC): use argument to macro, not "secs"
	(CONVERT_SUBSECSTIMESPEC2NTP): renamed, use 1LL for left shift

	* lib/b_time.c (bk_time_iso_format): use correct MICROSEC for
	proper determination of desired precision
	(bk_time_ntp_format): generate ntp stamps, too
	(bk_time_ntp_parse): simplify, eliminate malloc, use strtoul, not baka

	* lib/b_string.c (bk_decode_base64): don't NUL terminate vptr buf

	* test/entropy/randtest.c (log2): don't define function if macro exists

2002-03-05  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_listen): Add
	SO_REUSEADDR to listening socket.

2002-03-04  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_decode_base64): Don't demand that base64 encoded
	buffer to be string.

2002-03-01  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (BK_INIT_FUN, BK_FINISH_FUN) [__INSURE__]:
	use asm() to set up ctors/dtors since that doesn't offend insure++
	
2002-02-27  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_time.c (bk_time_ntp_parse): Parse ntp time into struct
	timespec [format function still needed].

2002-02-25  James Tanis  <jtt@saint.sysdetect.com>

	* src/proto.c (main): Clarify the arc preprocessing.

2002-02-22  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_connect): remove dead code
	(tcp_end): remove dead code

	* lib/b_pollio.c (polling_io_ioh_handler): suppress Insure error

	* include/libbk.h (BK_STRINGIFY): expand argument into string form

	* include/libbk_oscompat.h (BK_FUNCNAME): portable use of __func__
	(ntohll, htonll): cast everything to u_int64_t before 32 bit shifts
	suppress Insure error
	
2002-02-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_ioh_print{,f}

2002-02-20  Brian Lindauer  <lindauer@sysdetect.com>
